fixed alignment

--- a/week5_ice/styles/style.css
+++ b/week5_ice/styles/style.css
@@ -1,24 +1,21 @@
 body{
     background-color: #737373;
     margin: 0 auto;
-    
 }
 .MainImage{
     margin: 0 auto;
     width: 100%;
 }
 section img{
-    justify-content: center;
+    margin: auto;
     border: 10px solid #444444;;
     border-radius: 1000px;
     width: 70%;
     
 }
 #MainGrid{
-   
-    text-align: center;
     display: grid;
-    padding: 40px;
+    padding: 35px;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
